# AI-Novel-Editor

./: .gitignore  README.md  pyproject.toml
Users/16276/Desktop/code/AI_Novel_Editor/frontend/src/: App.js
Users/16276/Desktop/code/AI_Novel_Editor/frontend/src/components/: AIAssistant.js
backend/: .env.example  server.py
backend/scripts/: start_backend_linux.sh  start_backend_macos.sh  start_backend_windows.bat
backend/services/: ai_service.py
data/stories/: 1746070134.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/scripts/: start_frontend_linux.sh  start_frontend_windows.bat
frontend/src/: App.css  App.js  index.css
frontend/src/components/: AIAssistant.js  Editor.js  Header.js  StoryList.js
